[package]
name = "asset-guard"
version = "0.1.0"
authors = ["Joseph \"Dunkel\" Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "asset_guard"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
anyhow = "1"
neon = "0.4.0"
xz2 = "0.1"
